--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pokemon</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-    <h1>hello</h1>
+    <h1>Pokemon list</h1>
+    <section id="container"></section>
+    <script src="../Web Dev Bootcamp 2023/Pokemon/pockemon.js"></script>
 </body>
+    
 </html>
