--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Pokemon list</h1>
     <section id="container"></section>
-    <script src="../Web Dev Bootcamp 2023/Pokemon/pockemon.js"></script>
+    <script src="script.js"></script>
 </body>
     
 </html>
