--- a/index.html
+++ b/index.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokemon</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="stylespokemon.css">
 </head>
 
 <body>
-    <h1>Pokemon list</h1>
+    <h1>Welcome!</h1>
+    <button>Click me</button>
+
+    <h2>Pokemon list</h2>
     <section id="container"></section>
-    <script src="script.js"></script>
+
+    <script src="pockemon.js"></script>
+
 </body>
-    
+
 </html>
